# ChangeLog for media-gfx/album
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/album/ChangeLog,v 1.28 2007/04/02 04:38:25 vanquirius Exp $

  02 Apr 2007; Marcelo Goes <vanquirius@gentoo.org> -album-3.12.ebuild,
  album-4.02.ebuild:
  Mark 4.02 x86 stable, remove old ebuild.

  09 Mar 2007; nixnut <nixnut@gentoo.org> album-3.13.ebuild:
  Stable on ppc wrt bug 169249

  06 Mar 2007; Markus Rothe <corsair@gentoo.org> album-3.13.ebuild:
  Stable on ppc64; bug #169249

  04 Mar 2007; Simon Stelling <blubb@gentoo.org> album-3.13.ebuild:
  stable on amd64; bug 169249

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  03 Dec 2006; Markus Rothe <corsair@gentoo.org> album-3.12.ebuild:
  Stable on ppc64

*album-3.13 (02 Dec 2006)

  02 Dec 2006; Marcelo Goes <vanquirius@gentoo.org> album-3.12.ebuild,
  +album-3.13.ebuild:
  Mark 3.12 x86 stable, 3.13 version bump.

*album-3.12 (21 Jul 2006)

  21 Jul 2006; Marcelo Goes <vanquirius@gentoo.org> -album-3.07.ebuild,
  +album-3.12.ebuild:
  3.12 version bump.

  07 Feb 2006; Aron Griffis <agriffis@gentoo.org> album-3.10.ebuild:
  Mark 3.10 stable on alpha

  21 Jan 2006; Markus Rothe <corsair@gentoo.org> album-3.10.ebuild:
  Stable on ppc64

  13 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> -album-2.52.ebuild,
  -album-3.05.ebuild, album-3.10.ebuild:
  Remove old ebuilds, mark 3.10 x86 stable.

  06 Jan 2006; Aron Griffis <agriffis@gentoo.org> album-3.10.ebuild:
  Mark 3.10 ~alpha

  18 Dec 2005; Markus Rothe <corsair@gentoo.org> album-3.07.ebuild:
  Stable on ppc64

*album-3.10 (12 Nov 2005)

  12 Nov 2005; Marcelo Goes <vanquirius@gentoo.org> -album-2.44.ebuild,
  -album-3.00.ebuild, album-3.07.ebuild, +album-3.10.ebuild:
  3.07 x86 stable, 3.10 version bump.

  09 Sep 2005; Marcelo Goes <vanquirius@gentoo.org> album-3.07.ebuild:
  Add ~amd64 keyword. See bug 49688. Thanks to all testers.

*album-3.07 (13 Aug 2005)
