@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/jhead/jhead-2.7.ebuild,v 1.4 2007/03/28 03:39:34 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/jhead/jhead-2.7.ebuild,v 1.5 2007/04/16 07:34:04 corsair Exp $
 
 inherit eutils toolchain-funcs
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.sentex.net/~mwandel/jhead/"
 SRC_URI="http://www.sentex.net/~mwandel/jhead/${P}.tar.gz"
 LICENSE="public-domain"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 hppa ~ia64 ~ppc ~ppc-macos ~ppc64 sparc x86"
+KEYWORDS="~alpha ~amd64 hppa ~ia64 ~ppc ~ppc-macos ppc64 sparc x86"
 IUSE=""
 
 DEPEND="virtual/libc"
