@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/qiv/qiv-2.0-r1.ebuild,v 1.2 2007/04/06 16:41:52 vanquirius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/qiv/qiv-2.0-r1.ebuild,v 1.3 2007/04/16 07:34:47 corsair Exp $
 
 inherit eutils
 
@@ -12,7 +12,7 @@ HOMEPAGE="http://www.klografx.net/qiv/"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~sparc x86"
+KEYWORDS="~alpha ~amd64 ~ppc ppc64 ~sparc x86"
 IUSE="xinerama"
 
 DEPEND="media-libs/libpng
