@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/jhead
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/jhead/ChangeLog,v 1.56 2007/03/28 03:39:34 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/jhead/ChangeLog,v 1.57 2007/04/16 07:34:04 corsair Exp $
+
+  16 Apr 2007; Markus Rothe <corsair@gentoo.org> jhead-2.7.ebuild:
+  Stable on ppc64
 
   28 Mar 2007; Jeroen Roovers <jer@gentoo.org> :
   Stable for HPPA too.
