@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/qiv
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/qiv/ChangeLog,v 1.26 2007/04/06 16:41:52 vanquirius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/qiv/ChangeLog,v 1.27 2007/04/16 07:34:47 corsair Exp $
+
+  16 Apr 2007; Markus Rothe <corsair@gentoo.org> qiv-2.0-r1.ebuild:
+  Stable on ppc64
 
   06 Apr 2007; Marcelo Goes <vanquirius@gentoo.org> qiv-2.0-r1.ebuild:
   Mark 2.0-r1 x86 stable.
