@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/album
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/album/ChangeLog,v 1.28 2007/04/02 04:38:25 vanquirius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/album/ChangeLog,v 1.29 2007/04/16 07:33:10 corsair Exp $
+
+  16 Apr 2007; Markus Rothe <corsair@gentoo.org> album-4.02.ebuild:
+  Stable on ppc64
 
   02 Apr 2007; Marcelo Goes <vanquirius@gentoo.org> -album-3.12.ebuild,
   album-4.02.ebuild:
